feat: update ui

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -162,3 +162,25 @@ tbody tr td {
   transform: translate(0, -50%);
   height: fit-content;
 }
+
+.mantine-dat7mn .mantine-1n7zxp {
+  padding-left: 24px;
+}
+.mantine-1v7s5f8 {
+  font-weight: 500;
+}
+.mantine-17ts0d3 .mantine-bkyer9 {
+  padding-left: 12px;
+}
+.mantine-j3jbtx {
+  top: 50%;
+  transform: translate(0, -50%);
+  height: fit-content;
+}
+.mantine-1laou7w[data-active] {
+  border-color: #b62a65;
+}
+
+.mantine-1laou7w[data-active]:hover {
+  border-color: #b62a65;
+}
