--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -161,6 +161,7 @@ tbody tr td {
 .mantine-3wqyw5 {
   margin-left: 0;
 }
+
 .mantine-hclwis {
   margin-left: 12px;
 }
@@ -186,6 +187,7 @@ tbody tr td {
 thead td {
   padding: 0.4375rem 0.625rem;
 }
+
 tbody td {
   padding: 0.4375rem 0.625rem;
 }
@@ -247,10 +249,12 @@ tbody td {
   width: 8px;
   height: 8px;
 }
+
 .thin-scroll::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: rgba(22, 24, 35, 0.06);
 }
+
 .thin-scroll::-webkit-scrollbar-track {
   border-radius: 0;
   background-color: #eaeefb;
@@ -258,4 +262,37 @@ tbody td {
 
 .mantine-InputWrapper-error {
   color: #d72525 !important;
+}
+
+.date-input-class {
+  .mantine-Input-input {
+    padding-right: 0 !important;
+    margin-left: 6px;
+    font-size: 12px;
+    padding-bottom: 6px;
+  }
+
+  .mantine-Input-rightSection {
+    pointer-events: none;
+  }
+}
+
+.input_select_status {
+  .mantine-Input-input {
+    margin-left: 6px;
+    font-size: 12px;
+    padding-bottom: 6px;
+    padding-right: 0px;
+  }
+
+  .mantine-Select-rightSection {
+    pointer-events: none;
+  }
+}
+
+.input_search {
+  .mantine-Input-input {
+    font-size: 12px;
+    margin-top: 2px;
+  }
 }
